# lct

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  lct_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
.github/workflows /: ci.yml
app/: Dockerfile  config.py  db.py  lct_config.yaml  lct_config_local.yaml  main.py  model.py  schema.py  security.py  task.py  worker_task.py
app/analyze/: sql_static.py
app/client/: trino_client.py  yandex_client.py
app/routers/: task.py
info/request/: extended.json  flights.json  invalid_format.json  questsH.json  sample.json  sql_explain.json
info/sql/: flights.sql  questsH.sql
scripts/: analyze_sql.py  flights.json  generate_input_json.py  main.py  questsH.context_pack.json  sql_static.py  worker.py  yandex_client.py
tests/app/client/: test_trino_client.py
tests/app/routers/: test_task.py
